Issue #13: too big

--- a/css/theme-nature.css
+++ b/css/theme-nature.css
@@ -414,7 +414,7 @@ span {
   font-weight: 400;
 }
 p.lead {
-  font-size: 22px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 28px;
 }
@@ -730,7 +730,7 @@ footer.bg-dark li,
   height: 40px;
   min-width: 150px;
   line-height: 36px;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
